app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 
  template:
    metadata:
      labels:
        app: 
    spec:
      containers:
        - name:
          image: 
          ports:
            - containerPort: 
          command: 
          - /bin/bash
          - -c 
          - |
            commandhere1
            commandhere2
          imagePullPolicy: Always
