database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: 
spec:
  selector:
    matchLabels:
      app: 
  template:
    metadata:
      labels:
        app: 
    spec:
      containers:
        - name: 
          image: 
          ports:
            - containerPort:
          volumeMounts:
            - name: 
              mountPath: 
      volumes:
        - name: 
          persistentVolumeClaim:
            claimName:
