app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
spec:
  selector:
    app: 
  ports:
    - port:
      targetPort: 
  type: LoadBalancer
  # other  types are : NodePort & ClusterIP
